FlightPath 4.x Changelog
========================

2015-12-28
  Working on Display by Type, to make it more in line with Display by Year.
  
  Worked on search module, to get multiple majors right.
  Modified faculty table, to handle major code csv
  Modified user.module for the same faculty purpose.
  Fixed bug in new db_result() function, it was not working as expected.
  

2015-12-25
  Worked on edit student page; specifically how major codes are entered.  They are now no longer saved to the 
  "students" table, but instead need to be saved to the "student_degrees" table.
  
  Removed the major_code field from the "students" table during install.
  

2015-12-24
  Continued working on cfieldset as a new form element, and what if selection form workflow.
  

2015-12-23
  Working on multi-degree selection for What-If settings screen.  Added new form element type- cfieldset, for collapsible fieldsets.
  Modified style.css slightly to go with it.
  

2015-12-21
  Working on adding PDO support, replacing the outdated mysql() functions.


2015-12-18
  Have been putting finishing touches on track selections.  Squashing bugs that come up as a result.  Issues with What If track selections.
  Also, made major and track selections look nicer on advising history.  Fixed bug where loading from student search didn't go to What If
  correctly if that was the previous advising.  Also, fixed track selection bug there, too.
  
  
2015-12-14
 Still working on changing track selections.  


2015-12-11
  Working on changing track selections
  

2015-12-9
  Have been working on unassignments in groups, cleaned up a lot of code, and have been making the Degrees page listing
  (for admin data entry) much cleaner and nicer-looking.
  

2015-12-3
  Unassignments appear to be working for bare degree plan and in groups.  Working on making student's multiple degrees
  show up nicer in the Currently Advising box.


2015-12-2